Delta versioon 3.6.21.3
Selle versiooniga tulevad kaasa järgmised parandused:
* Saada välja nupu vajutusel süsteemi viga
* Massiline ümberliigitamine ei toimi
* Peale dokumendi/asjatoimiku liigi kustutamist jääb liik alles "alusta uut" menüüsse
* Otsingu tulemuste vaatamine
* T024-675 Open Office hangumine Deltas
* Otsingutulemuste nimekirjades "Näita kõiki" nupu alt avanevate ridade arvu piiramine


git-svn-id: https://svn.smit/tarkvara/edhs/branches/nortal@122266 5fddf92a-9921-11dd-8d32-b999f448c456